--- a/products.html
+++ b/products.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/products.css">
+  <link rel="stylesheet" href="css/zoom.css">
 </head>
 <body>
   <header class="header">
@@ -83,12 +84,12 @@
         <div class="col-md-6">
           <label class="form-label">الحجم</label>
           <div id="sizeButtons" class="btn-group" role="group"></div>
-          <input type="hidden" id="size" required>
+          <input type="hidden" id="size">
         </div>
         <div class="col-md-6">
           <label class="form-label">اللون</label>
           <div id="colorButtons" class="btn-group" role="group"></div>
-          <input type="hidden" id="color" required>
+          <input type="hidden" id="color">
         </div>
         <div class="col-12 product-info mt-4">
           <p id="productPriceSummary" class="price"></p>
@@ -111,7 +112,7 @@
     <div class="footer-content container">
       <h2>تواصلوا معنا</h2>
       <p>الهاتف: <a href="tel:+213558815453">+213 558 815 453</a></p>
-      <p>فيسبوك: <a href="#">صفحتنا الرسمية</a></p>
+      <p>فيسبوك: <a href="https://www.facebook.com/profile.php?id=61578899731867">صفحتنا الرسمية</a></p>
       <p>إنستغرام: <a href="#">حسابنا الرسمي</a></p>
       <p class="developer-credit">تم تطوير الموقع بواسطة: اسم المبرمج</p>
     </div>
